# asmek-authcogs

./: .coveragerc  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: automated-checks.yml  pypi-release.yml  revision-increment.yml
asmek_authcogs/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  models.py  signals.py
asmek_authcogs/cogs/: about.py  auth.py  hr.py  links.py  recruit.py  siege.py  siege2.py
asmek_authcogs/migrations/: 0001_initial.py  0002_alter_link_name.py  0003_alter_general_options.py  0004_authcogs_delete_general.py  0005_groupwelcome.py  0006_remove_groupwelcome_thumbnail.py
testauth/settings/: local.py
