[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asmek-authcogs"
dynamic = ["version"]
description = 'ASMEK customized cogs for aa-discordbot'
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0"
keywords = []
authors = [
  { name = "AstrumMechanica", email = "astrummechanica@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "allianceauth>=3",
  "allianceauth-discordbot"
  ]

[project.urls]
Documentation = "https://github.com/AstrumMechanica/asmek-authcogs#readme"
Issues = "https://github.com/AstrumMechanica/asmek-authcogs/issues"
Source = "https://github.com/AstrumMechanica/asmek-authcogs"

[tool.hatch.version]
path = "asmek_authcogs/__init__.py"

[tool.isort]
profile = "black"
multi_line_output = 3
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "ALLIANCEAUTH",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
known_allianceauth = ["allianceauth", "app_utils"]
known_django = ["django", "django_webtest", "esi", "eveuniverse"]
